# Furo

./: .gitattributes  .gitignore  AI-Mistakes-Log.md  FURO_ARCHITECTURE.md  MAC_BUILD_GUIDE.md  README.md  diff.txt  fix.ps1  index.html  package-lock.json  package.json  release.ps1  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  check.js  clean.cjs  clean2.cjs  fix.cjs  fix.js  remove_resize.cjs  rep.cjs  resize.cjs  tauri.conf.json  test.cjs  win_tracker.rs
src-tauri/.cargo/: config.toml
src-tauri/binaries/: whisper-server-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  dsp.rs  hotkey.rs  hotkey_mac.rs  hotkey_win.rs  lib.rs  pipeline.rs  processor.rs  settings.rs  sidecar.rs  transcriber.rs  typer.rs  typer_mac.rs  typer_win.rs  vad.rs
src-tauri/windows/: hooks.nsh
src/components/: CustomSelect.tsx  Dashboard.tsx  FloatingWidget.tsx  TitleBar.tsx
src/hooks/: useFuro.ts  useHistory.ts
