[package]
name = "furo"
version = "0.2.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture (cross-platform via WASAPI / CoreAudio)
cpal = "0.17"

# Lock-free channel for hotkey queue (hook → worker thread)
crossbeam-channel = "0.5"

# Fast Mutex/RwLock
parking_lot = "0.12"

# Filler word stripping in post-processing
regex = "1"
fancy-regex = "0.14"
once_cell = "1"

# HTTP client for sidecar servers + model downloads
reqwest = { version = "0.12", features = ["blocking", "stream", "json", "multipart"] }
futures-util = "0.3"

# %APPDATA% path resolution
dirs = "5"

# Async runtime (Tauri already pulls tokio, but we need spawn_blocking)
tokio = { version = "1", features = ["rt", "sync", "macros"] }

# Logging
log = "0.4"
env_logger = "0.11"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
panic = "abort"

# ── Platform-specific dependencies ──────────────────────────────────────────

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

# ONNX Runtime for Silero VAD — prebuilt binaries not available for x86_64 macOS
# (ONNX Runtime dropped x86_64-apple-darwin as of 1.24.1).
# On x86_64 macOS, VAD is compiled as a passthrough stub (no ONNX).
[target.'cfg(not(all(target_os = "macos", target_arch = "x86_64")))'.dependencies]
ort = "2.0.0-rc.12"
